lib_LTLIBRARIES = libgemrb_core.la
libgemrb_core_la_LDFLAGS = -version-info 0:0:0 @LIBDL@
AM_CPPFLAGS = -DGEM_BUILD_DLL
libgemrb_core_la_SOURCES = \
	Actions.cpp \
	Scriptable/Actor.cpp \
	Scriptable/ActorBlock.cpp \
	ActorMgr.cpp \
	Ambient.cpp \
	AmbientMgr.cpp \
	Animation.cpp \
	AnimationFactory.cpp \
	AnimationMgr.cpp \
	ArchiveImporter.cpp \
	Audio.cpp \
	Bitmap.cpp \
	Button.cpp \
	Cache.cpp \
	CachedFileStream.cpp \
	Calendar.cpp \
	Callback.cpp \
	CharAnimations.cpp \
	Compressor.cpp \
	Console.cpp \
	Control.cpp \
	ControlAnimation.cpp \
	Core.cpp \
	DataFileMgr.cpp \
	DataStream.cpp \
	Dialog.cpp \
	DialogMgr.cpp \
	DisplayMessage.cpp \
	EffectMgr.cpp \
	EffectQueue.cpp \
	EventMgr.cpp \
	Factory.cpp \
	FactoryObject.cpp \
	FileStream.cpp \
	Font.cpp \
	GSUtils.cpp \
	Game.cpp \
	GameControl.cpp \
	GameData.cpp \
	GameScript.cpp \
	GlobalTimer.cpp \
	Image.cpp \
	ImageFactory.cpp \
	ImageMgr.cpp \
	ImageWriter.cpp \
	IniSpawn.cpp \
	Interface.cpp \
	Inventory.cpp \
	Item.cpp \
	ItemMgr.cpp \
	LRUCache.cpp \
	Label.cpp \
	Map.cpp \
	MapControl.cpp \
	MapMgr.cpp \
	MemoryStream.cpp \
	MoviePlayer.cpp \
	MusicMgr.cpp \
	PCStatStruct.cpp \
	Palette.cpp \
	PalettedImageMgr.cpp \
	Particles.cpp \
	Plugin.cpp \
	PluginMgr.cpp \
	Polygon.cpp \
	Progressbar.cpp \
	Projectile.cpp \
	ProjectileMgr.cpp \
	ProjectileServer.cpp \
	Region.cpp \
	Resource.cpp \
	ResourceDesc.cpp \
	ResourceManager.cpp \
	ResourceSource.cpp \
	SaveGameIterator.cpp \
	SaveGameMgr.cpp \
	ScriptEngine.cpp \
	ScriptedAnimation.cpp \
	ScrollBar.cpp \
	Slider.cpp \
	SoundMgr.cpp \
	Spell.cpp \
	SpellMgr.cpp \
	Spellbook.cpp \
	Sprite2D.cpp \
	SpriteCover.cpp \
	Store.cpp \
	StoreMgr.cpp \
	StringMgr.cpp \
	SymbolMgr.cpp \
	TableMgr.cpp \
	TextArea.cpp \
	TextEdit.cpp \
	Tile.cpp \
	TileMap.cpp \
	TileMapMgr.cpp \
	TileOverlay.cpp \
	TileSetMgr.cpp \
	Triggers.cpp \
	VFS.cpp \
	Variables.cpp \
	Video.cpp \
	VideoMode.cpp \
	VideoModes.cpp \
	Window.cpp \
	WindowMgr.cpp \
	WorldMap.cpp \
	WorldMapControl.cpp \
	WorldMapMgr.cpp

noinst_HEADERS = *.h
