lib_LTLIBRARIES = libgemrb_core.la
libgemrb_core_la_LDFLAGS = -version-info 0:0:0 @LIBDL@
AM_CPPFLAGS = -DGEM_BUILD_DLL
libgemrb_core_la_SOURCES = \
	ActorMgr.cpp \
	Ambient.cpp \
	AmbientMgr.cpp \
	Animation.cpp \
	AnimationFactory.cpp \
	AnimationMgr.cpp \
	ArchiveImporter.cpp \
	Audio.cpp \
	Bitmap.cpp \
	Cache.cpp \
	Calendar.cpp \
	Callback.cpp \
	CharAnimations.cpp \
	Compressor.cpp \
	ControlAnimation.cpp \
	Core.cpp \
	DataFileMgr.cpp \
	Dialog.cpp \
	DialogHandler.cpp \
	DialogMgr.cpp \
	DisplayMessage.cpp \
	EffectMgr.cpp \
	EffectQueue.cpp \
	Factory.cpp \
	FactoryObject.cpp \
	Font.cpp \
	FontManager.cpp \
	GUI/Button.cpp \
	GUI/Console.cpp \
	GUI/Control.cpp \
	GUI/EventMgr.cpp \
	GUI/GameControl.cpp \
	GUI/Label.cpp \
	GUI/MapControl.cpp \
	GUI/Progressbar.cpp \
	GUI/ScrollBar.cpp \
	GUI/Slider.cpp \
	GUI/TextArea.cpp \
	GUI/TextEdit.cpp \
	GUI/Window.cpp \
	GUI/WorldMapControl.cpp \
	Game.cpp \
	GameData.cpp \
	GameScript/Actions.cpp \
	GameScript/GSUtils.cpp \
	GameScript/GameScript.cpp \
	GameScript/Matching.cpp \
	GameScript/Objects.cpp \
	GameScript/Triggers.cpp \
	GlobalTimer.cpp \
	FileCache.cpp \
	Image.cpp \
	ImageFactory.cpp \
	ImageMgr.cpp \
	ImageWriter.cpp \
	IndexedArchive.cpp \
	IniSpawn.cpp \
	Interface.cpp \
	InterfaceConfig.cpp \
	Inventory.cpp \
	Item.cpp \
	ItemMgr.cpp \
	KeyMap.cpp \
	LRUCache.cpp \
	Map.cpp \
	MapMgr.cpp \
	MoviePlayer.cpp \
	MusicMgr.cpp \
	Palette.cpp \
	PalettedImageMgr.cpp \
	Particles.cpp \
	Plugin.cpp \
	PluginLoader.cpp \
	PluginMgr.cpp \
	Polygon.cpp \
	Projectile.cpp \
	ProjectileMgr.cpp \
	ProjectileServer.cpp \
	Region.cpp \
	Resource.cpp \
	ResourceDesc.cpp \
	ResourceManager.cpp \
	ResourceSource.cpp \
	SaveGameIterator.cpp \
	SaveGameMgr.cpp \
	ScriptEngine.cpp \
	Scriptable/Actor.cpp \
	Scriptable/CombatInfo.cpp \
	Scriptable/Container.cpp \
	Scriptable/Door.cpp \
	Scriptable/InfoPoint.cpp \
	Scriptable/Scriptable.cpp \
	Scriptable/PCStatStruct.cpp \
	ScriptedAnimation.cpp \
	SoundMgr.cpp \
	Spell.cpp \
	SpellMgr.cpp \
	Spellbook.cpp \
	Sprite2D.cpp \
	SpriteCover.cpp \
	Store.cpp \
	StoreMgr.cpp \
	StringMgr.cpp \
	SymbolMgr.cpp \
	System/Logger/File.cpp \
	System/Logger/MessageWindowLogger.cpp \
	System/Logger/Stdio.cpp \
	System/DataStream.cpp \
	System/FileStream.cpp \
	System/Logger.cpp \
	System/Logging.cpp \
	System/MemoryStream.cpp \
	System/SlicedStream.cpp \
	System/String.cpp \
	System/StringBuffer.cpp \
	System/VFS.cpp \
	TableMgr.cpp \
	Tile.cpp \
	TileMap.cpp \
	TileMapMgr.cpp \
	TileOverlay.cpp \
	TileSetMgr.cpp \
	Variables.cpp \
	Video.cpp \
	WindowMgr.cpp \
	WorldMap.cpp \
	WorldMapMgr.cpp

noinst_HEADERS = *.h
